--- a/30.05.2018/index.html
+++ b/30.05.2018/index.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"  >
 </head>
 <body>
-
+<div class="page">
+    <div class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 logo"></div>
+                <div class="site_name col-md-9">
+                    <h1 class="text-center">GitGuide</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="main">
+        <div class="container">
+            <div class="row">
+                <div class="something col-md-4"></div>
+                <div class="something col-md-4"></div>
+                <div class="something col-md-4"></div>
+                <div class="something col-md-4"></div>
+                <div class="something col-md-4"></div>
+                <div class="something col-md-4"></div>
+                <div class="something col-md-4"></div>
+                <div class="something col-md-4"></div>
+                <div class="something col-md-4"></div>
+                <div class="something col-md-4"></div>
+                <div class="something col-md-4"></div>
+                <div class="something col-md-4"></div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+</div>
 </body>
 </html>
